2004-07-24  MenTaLguY  <mental@rydia.net>

	* configure.in, src/Makefile.in, src/main.cpp, src/gc-core.h:
	  added libgc dependency

2004-07-23  MenTaLguY  <mental@rydia.net>

	* src/Makefile.am, src/traits/reference.h, src/util/tuple.h:
	  added generic Tuple type

2004-07-23  Ted Gould  <ted@gould.cx>

	* src/attributes.cpp, src/attributes.h, src/sp-namedview.cpp,
	src/sp-namedview.h, src/dialogs/desktop-properties.cpp,
	src/display/canvas-grid.cpp, src/display/canvas-grid.h:

	Adding in the ability to have 'emphasis grid lines' where some lines are a
	different color than others.  In the default case every fifth grid line
	gets to be 0x11 darker alpha.  Nothing that will get in your way, but
	enough that you can find the spacing.  All parameters are changeable in
	document preferences.

2004-07-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* autogen.sh: Move unversioned automake to last resort.

2004-07-20  Kees Cook  <kees@outflux.net>

	* src/dialogs/desktop-preferences.cpp: corrected my usage of static
	  l18n strings.
	* src/dialogs/stroke-style.cpp: fixed missing l18n. (bug #994837)
	* src/dialogs/sp-attribute-widget.cpp: went hunting for other static
	  l18n strings.  Fixed some here too.
	* autogen.sh: cleanups and more debugging.
	* share/extensions/sk2svg.sh: tempfile cleanups from pjrm (patch #990009)

2004-07-18  MenTaLguY  <mental@rydia.net>

	* configure.in, src/Makefile.am, src/algorithms/Makefile_insert,
	  src/algorithms/makefile.in, src/traits/Makefile_insert,
	  src/traits/makefile.in, src/util/Makefile_insert, src/util/makefile.in:
	  
	  added src/algorithms, src/traits, and src/util subdirs
	
	* src/algorithms/longest-common-suffix.h:

	  added generic "longest common suffix" algorithm

	* src/traits/list.h: added traits class for lists

	* src/traits/tree-iterator.h: added traits class for n-ary tree iterators

	* src/util/list-iterator.h: STL iterator for lists

	* src/util/parent-axis.h: parent "axis" of tree iterator as list
